# admin-inventory-demo

./: .gitignore  README.md  manage.py  pyproject.toml
admin_inventory/: asgi.py  settings.py  urls.py  wsgi.py
inventory/: admin.py  models.py
inventory/migrations/: 0001_initial.py  0002_dummy_data.py
